bdr.BDR2.scala.error
Compilation error:
BDR2:5: error: '=>' expected but '=' found.
  case m if m="R" =>right();forward();
             ^BDR2:6: error: '=>' expected but '=' found.
  case m if m="L" =>left();forward();
             ^BDR2:7: error: '=>' expected but '=' found.
  case m if m="I" => right();right();forward()
             ^BDR2:8: error: '=>' expected but '=' found.
  case m if m="A" =>forward()
             ^BDR2:9: error: '=>' expected but '=' found.
  case m if m="B" =>forward();forward();
             ^BDR2:10: error: '=>' expected but '=' found.
  case m if m="C" =>forward();forward();forward();
             ^BDR2:11: error: '=>' expected but '=' found.
  case m if m="D" =>forward();forward();forward();forward();
             ^BDR2:12: error: '=>' expected but '=' found.
  case m if m="E" =>forward();forward();forward();forward();forward();
             ^BDR2:13: error: '=>' expected but '=' found.
  case m if m="F" =>forward();forward();forward();forward();forward();forward();
             ^BDR2:14: error: '=>' expected but '=' found.
  case m if m="Z" =>backward();
             ^BDR2:15: error: '=>' expected but '=' found.
  case m if m="Y" =>backward();backward();
             ^BDR2:16: error: '=>' expected but '=' found.
  case m if m="X" =>backward();backward();backward();
             ^BDR2:17: error: '=>' expected but '=' found.
  case m if m="W" =>backward();backward();backward();backward();
             ^BDR2:18: error: '=>' expected but '=' found.
  case m if m="V" =>backward();backward();backward();backward();backward();
             ^BDR2:19: error: '=>' expected but '=' found.
  case m if m="U" =>backward();backward();backward();backward();backward();backward();
             ^