bdr.BDR2.scala.code
var m = ""
var finished = false
while (!finished){
m match {
  case m if m="R" =>right();forward();
  case m if m="L" =>left();forward();
  case m if m="I" => right();right();forward()
  case m if m="A" =>forward()
  case m if m="B" =>forward();forward();
  case m if m="C" =>forward();forward();forward();
  case m if m="D" =>forward();forward();forward();forward();
  case m if m="E" =>forward();forward();forward();forward();forward();
  case m if m="F" =>forward();forward();forward();forward();forward();forward();
  case m if m="Z" =>backward();
  case m if m="Y" =>backward();backward();
  case m if m="X" =>backward();backward();backward();
  case m if m="W" =>backward();backward();backward();backward();
  case m if m="V" =>backward();backward();backward();backward();backward();
  case m if m="U" =>backward();backward();backward();backward();backward();backward();
  case _ => finished = true
}}